resources/css/secret-message.css
html {
    font-size: 16px;
}
body {
    background-color: rgb(225, 215, 202);
}

/*-----'WELCOME' banner-----*/
.main-heading-container {
    width: 100%;
    margin: auto;
    font-size: 3rem
}

#main-heading {
    color:black;
    text-align: center;
    text-transform: uppercase;

}

/*-------secret message section-------*/

.box-container {
    display: flex;
    justify-content: space-around;
    align-content: center;
    width: 100%;
    margin: auto;
    flex-wrap: wrap;
    padding: 5%;
    box-sizing: border-box;
    
}

.box {
    height: 50px;
    width: 100px;
    background-color: brown;
    color: white;
    margin: 3%;
    text-align: center;
    flex: 1 100px;
    cursor: pointer;
}
#box-1 {
    color:brown;
}

#box-3 {
    visibility: collapse;
}

#box-5 {
    transform:rotate(180deg)
}

#reset {
    flex: 100%;
}

/*-------rock paper scissors section-----*/

#game-container {
    display: flex;
    width: 100%;
    max-height: 700px;
    min-height: 400px;
    margin: auto;
    justify-content: center;
    align-content: center;
    flex-wrap: wrap;
}

.guess-container {
    display: flex;
    max-width: 300px;
    min-width: 150px;
    max-height: 500px;
    min-height: 250px;
    margin: auto;
    justify-content: center;
    align-content: center;
    background-color: blue;
}

#lose-container {
    display: none;
    width: 100%;
    max-height: 700px;
    min-height: 400px;
    margin: auto;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    flex-wrap: wrap;
    text-align: center;
}

#win-container {
    display: none;
    width: 100%;
    max-height: 700px;
    min-height: 400px;
    margin: auto;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    flex-wrap: wrap;
    text-align: center;
}

.game-button {
    height: 50px;
    width: 100px;
}

.resetGameButton {
    display: none;
    height: 50px;
    width: 100px;
}

